--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>Surfboard Inventory</title>
+    <title>SIMS (Surfboard Inventory Management System)
+    </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
